// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wireframe: WireFrameAnnotationsNotes should render correctly 1`] = `
<WireFrameAnnotationsNotesContainer
  tabIndex={0}
>
  <li
    className=""
    data-annotation-id={1}
    key="1"
  >
    <WireFrameAnnotationsNote
      component={
        Object {
          "Component": [MockFunction],
          "count": 1,
          "id": 1,
          "options": Object {
            "description": "Test description",
            "title": "Test component",
          },
        }
      }
    />
  </li>
</WireFrameAnnotationsNotesContainer>
`;

exports[`Wireframe: WireFrameAnnotationsNotes should render correctly with highlight 1`] = `
<WireFrameAnnotationsNotesContainer
  tabIndex={0}
>
  <li
    className="highlight"
    data-annotation-id={1}
    key="1"
  >
    <WireFrameAnnotationsNote
      component={
        Object {
          "Component": [MockFunction],
          "count": 1,
          "id": 1,
          "options": Object {
            "description": "Test description",
            "title": "Test component",
          },
        }
      }
    />
  </li>
</WireFrameAnnotationsNotesContainer>
`;
